--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-font": "^1.2.1",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
