--- a/package.json
+++ b/package.json
@@ -1,42 +1,34 @@
 {
-  "name": "krishi_bazar",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-auto-image-slider": "^1.0.0",
-    "react-dom": "^18.2.0",
-    "react-font": "^1.2.1",
-    "react-icons": "^4.7.1",
-    "react-scripts": "5.0.1",
-    "react-simple-image-slider": "^2.4.1",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.8.42",
+    "@mui/material": "^5.11.5",
+    "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
+    "firebase": "^9.15.0",
+    "google-map-react": "^2.2.0",
+    "next": "13.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-messenger-chat-plugin": "^3.0.5",
+    "react-redux": "^8.0.5",
+    "react-simple-image-slider": "^2.4.1",
+    "tw-elements": "^1.0.0-alpha13"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
